src/objects/TRAK_Environment__c.object
<CustomObject>
    <description>Business Description: This object is used to track the environments in the project landscape. This may include several SFDC environments as well as other systems. Environments can be linked to releases to help track what releases have been put in to what environments.

Used In: Release Tracker App</description>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Environments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_since_last_refresh__c</fullName>
        <formula>IF(NOW()- Last_Refresh__c &gt;= 60, IMAGE(IF(ISPICKVAL($UserRole.PortalType,&apos;Partner&apos;),&apos;/releasetracker&apos;,&apos;&apos;)&amp;&apos;/img/msg_icons/error16.png&apos;, &apos;Red&apos;) , IMAGE(IF(ISPICKVAL($UserRole.PortalType,&apos;Partner&apos;),&apos;/releasetracker&apos;,&apos;&apos;)&amp;&apos;/img/msg_icons/confirm16.png&apos;, &apos;Green&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Refresh Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Purpose of the environment and the users involved</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Refresh__c</fullName>
        <inlineHelpText>The date this environment was last refreshed</inlineHelpText>
        <label>Last Refresh</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Refresh_Date__c</fullName>
        <label>Latest Refresh Date</label>
        <summarizedField>TRAK_Sandbox_Refresh_Log__c.Refresh_Date__c</summarizedField>
        <summaryForeignKey>TRAK_Sandbox_Refresh_Log__c.Environment__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Org_ID__c</fullName>
        <inlineHelpText>The SFDC Org ID or other technology specific technical reference number</inlineHelpText>
        <label>Org ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Sandbox_Requests__c</fullName>
        <label>Pending Sandbox Requests</label>
        <summaryFilterItems>
            <field>TRAK_Sandbox_Refresh_Log__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </summaryFilterItems>
        <summaryForeignKey>TRAK_Sandbox_Refresh_Log__c.Environment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SFDC</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Heroku</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <label>Track</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sprint</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Training/Demo</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Non Track</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Technology__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>ECC</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Developer Pro</fullName>
                </value>
                <value>
                    <fullName>Partial Data</fullName>
                </value>
                <value>
                    <fullName>Full Copy</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Environment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Last_Refresh__c</columns>
        <columns>Org_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SFDC</fullName>
        <columns>NAME</columns>
        <columns>Technology__c</columns>
        <columns>Description__c</columns>
        <columns>Track__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Days_since_last_refresh__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Technology__c</field>
            <operation>equals</operation>
            <value>SFDC</value>
        </filters>
        <label>1) SFDC Environments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>nonSFDC</fullName>
        <columns>NAME</columns>
        <columns>Technology__c</columns>
        <columns>Description__c</columns>
        <columns>Track__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Days_since_last_refresh__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Technology__c</field>
            <operation>notEqual</operation>
            <value>SFDC</value>
        </filters>
        <label>2) Non SFDC Environments</label>
    </listViews>
    <nameField>
        <label>Environment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>